[gd_scene load_steps=5 format=3 uid="uid://bfx2byyyonjsx"]

[ext_resource type="Script" uid="uid://dadwpensnqpw7" path="res://menu_and_ui/packed_scenes/history_button.gd" id="1_goyk1"]
[ext_resource type="Theme" uid="uid://cdeurf58sje0y" path="res://text_engine/themes/main_UI.tres" id="2_bh56n"]
[ext_resource type="FontFile" uid="uid://dsuxfmcdj66e3" path="res://text_engine/resources/UI/fonts/CrimsonText-Regular.ttf" id="3_4lwdi"]
[ext_resource type="FontFile" uid="uid://co5vsscgrr63x" path="res://text_engine/resources/UI/fonts/CrimsonText-Bold.ttf" id="4_nxxxh"]

[node name="history_button" type="ColorRect"]
custom_minimum_size = Vector2(0, 70)
offset_left = 8.0
offset_top = 70.0
offset_right = 940.0
offset_bottom = 130.0
script = ExtResource("1_goyk1")

[node name="slot_fg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="increment_text" type="RichTextLabel" parent="slot_fg"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 165.0
offset_bottom = 55.0
mouse_filter = 2
theme = ExtResource("2_bh56n")
theme_override_fonts/normal_font = ExtResource("3_4lwdi")
theme_override_fonts/bold_font = ExtResource("4_nxxxh")
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[b]2 Pages Ago[/b]"

[node name="interaction_name" type="RichTextLabel" parent="slot_fg"]
layout_mode = 0
offset_left = 178.0
offset_top = 10.0
offset_right = 411.0
offset_bottom = 55.0
mouse_filter = 2
theme = ExtResource("2_bh56n")
theme_override_fonts/normal_font = ExtResource("3_4lwdi")
theme_override_fonts/bold_font = ExtResource("4_nxxxh")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "An Obscure Alley"

[node name="date_text" type="RichTextLabel" parent="slot_fg"]
layout_mode = 0
offset_left = 736.0
offset_top = 10.0
offset_right = 917.0
offset_bottom = 55.0
mouse_filter = 2
theme = ExtResource("2_bh56n")
theme_override_fonts/normal_font = ExtResource("3_4lwdi")
theme_override_fonts/bold_font = ExtResource("4_nxxxh")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "2024-04-25:25"

[connection signal="mouse_entered" from="slot_fg" to="." method="_on_slot_fg_mouse_entered"]
[connection signal="mouse_exited" from="slot_fg" to="." method="_on_slot_fg_mouse_exited"]
